add structure to api docs
